2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c: Add a #ifdef HAVE_VOIP.
	Fixes bug #482190 (Marco Barisione).

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* data/Makefile.am:
	* data/empathy.desktop.in.in: Use fd.o standard location for autostart
	desktop files. Fixes bug #481860 (Stephane Loeuillet).

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.15.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/Makefile.am: Add tp-stream-engine.xml to EXTRA_DIST.
	* po/POTFILES.in: Add empathy-call-window.glade.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac:
	* NEWS: Update before release.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-private-chat.c: Fix refcounting of
	priv->factory. Fixes bug #473116.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat-window.c: Adding sanity checks to public
	functions.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-accounts-dialog.c:
	* libempathy/empathy-utils.c: Add some sanity checks. Fixes bug #463051.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-chat.c: Disconnect all signals in finalize.
	Fixes bug #462815.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chatrooms-window.c: Disconnect signals on
	chatroom manager. Fixes bug #456619.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-store.c: Disconnect signals on
	list and contacts when finalizing the store.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-chat-window.c: Hide VOIP stuff if empathy is
	not compiled with --enable-voip=yes. Fixes bug #482111
	(Sjoerd Simons, Xavier Claessens).

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>
